<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_activity"
    tools:context=".view.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="290dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar_detail"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/github"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_username_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_avatar_detail" />

                <TextView
                    android:id="@+id/tv_company_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/company"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_work"
                    app:layout_constraintEnd_toStartOf="@+id/tv_location_detail"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username_detail" />

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_company_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username_detail" />

                <TextView
                    android:id="@+id/tv_10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/_10"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/tv_15"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company_detail" />

                <TextView
                    android:id="@+id/tv_repository_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repository"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/tv_followers_detail"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_10" />

                <TextView
                    android:id="@+id/tv_15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/_15"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/tv_20"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company_detail" />

                <TextView
                    android:id="@+id/tv_followers_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/tv_following_detail"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_repository_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_15" />

                <TextView
                    android:id="@+id/tv_20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/_20"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_15"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location_detail" />

                <TextView
                    android:id="@+id/tv_following_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_20" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed"
                android:layout_gravity="bottom"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/design_default_color_primary"
                app:tabIndicatorHeight="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_favorite"
        android:contentDescription="@string/fab" />

    <ProgressBar
        android:id="@+id/progressBar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress"
        android:layout_gravity="center"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>